tests/udn_and_vms_test_4/policies.yaml
# policy in a udn
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-port-9001-only
  namespace: green
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 9001
---
# policy in the pod network
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-to-whole-world
  namespace: bar
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 8080
