test_outputs/connlist/udn_and_vms_test_4_connlist_output.txt
Permitted connectivity analyzed in Pod network:
0.0.0.0-255.255.255.255[External] => bar/mybar[Pod] : All Connections
0.0.0.0-255.255.255.255[External] => default/app-1[Pod] : All Connections
bar/mybar[Pod] => 0.0.0.0-255.255.255.255[External] : TCP 8080
bar/mybar[Pod] => default/app-1[Pod] : TCP 8080
default/app-1[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections
default/app-1[Pod] => bar/mybar[Pod] : All Connections

Permitted connectivity analyzed in UDN green:
0.0.0.0-255.255.255.255[External] => green[udn]/vm-a[VirtualMachine] : TCP 9001
0.0.0.0-255.255.255.255[External] => green[udn]/vm-b[VirtualMachine] : TCP 9001
0.0.0.0-255.255.255.255[External] => green[udn]/webserver[Pod] : TCP 9001
green[udn]/vm-a[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
green[udn]/vm-a[VirtualMachine] => green[udn]/vm-b[VirtualMachine] : TCP 9001
green[udn]/vm-a[VirtualMachine] => green[udn]/webserver[Pod] : TCP 9001
green[udn]/vm-b[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
green[udn]/vm-b[VirtualMachine] => green[udn]/vm-a[VirtualMachine] : TCP 9001
green[udn]/vm-b[VirtualMachine] => green[udn]/webserver[Pod] : TCP 9001
green[udn]/webserver[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections
green[udn]/webserver[Pod] => green[udn]/vm-a[VirtualMachine] : TCP 9001
green[udn]/webserver[Pod] => green[udn]/vm-b[VirtualMachine] : TCP 9001
