test_outputs/connlist/udn_and_vms_test_4_explain_output.txt

#########################################################
# Specific connections and their reasons in pod-network #
#########################################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between bar/mybar[Pod] => 0.0.0.0-255.255.255.255[External]:

Allowed connections:
	Allowed TCP:[8080] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'bar/egress-to-whole-world' allows connections by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

Denied connections:
	Denied TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'bar/egress-to-whole-world' selects bar/mybar[Pod], and Egress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between bar/mybar[Pod] => default/app-1[Pod]:

Allowed connections:
	Allowed TCP:[8080] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'bar/egress-to-whole-world' allows connections by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

Denied connections:
	Denied TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'bar/egress-to-whole-world' selects bar/mybar[Pod], and Egress rule #1 selects default/app-1[Pod], but the protocols and ports do not match
		Ingress (Allowed) due to the system default (Allow all)


########################################################################
# All Connections due to the system default (Allow all) in pod-network #
########################################################################
0.0.0.0-255.255.255.255[External] => bar/mybar[Pod]
0.0.0.0-255.255.255.255[External] => default/app-1[Pod]
default/app-1[Pod] => 0.0.0.0-255.255.255.255[External]
default/app-1[Pod] => bar/mybar[Pod]

###############################################################
# Specific connections and their reasons in primary UDN green #
###############################################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => green[udn]/vm-a[VirtualMachine]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/vm-a[VirtualMachine], and Ingress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => green[udn]/vm-b[VirtualMachine]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/vm-b[VirtualMachine], and Ingress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => green[udn]/webserver[Pod]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/webserver[Pod], and Ingress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/vm-a[VirtualMachine] => green[udn]/vm-b[VirtualMachine]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/vm-b[VirtualMachine], and Ingress rule #1 selects green[udn]/vm-a[VirtualMachine], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/vm-a[VirtualMachine] => green[udn]/webserver[Pod]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/webserver[Pod], and Ingress rule #1 selects green[udn]/vm-a[VirtualMachine], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/vm-b[VirtualMachine] => green[udn]/vm-a[VirtualMachine]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/vm-a[VirtualMachine], and Ingress rule #1 selects green[udn]/vm-b[VirtualMachine], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/vm-b[VirtualMachine] => green[udn]/webserver[Pod]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/webserver[Pod], and Ingress rule #1 selects green[udn]/vm-b[VirtualMachine], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver[Pod] => green[udn]/vm-a[VirtualMachine]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/vm-a[VirtualMachine], and Ingress rule #1 selects green[udn]/webserver[Pod], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver[Pod] => green[udn]/vm-b[VirtualMachine]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/vm-b[VirtualMachine], and Ingress rule #1 selects green[udn]/webserver[Pod], but the protocols and ports do not match


##############################################################################
# All Connections due to the system default (Allow all) in primary UDN green #
##############################################################################
green[udn]/vm-a[VirtualMachine] => 0.0.0.0-255.255.255.255[External]
green[udn]/vm-b[VirtualMachine] => 0.0.0.0-255.255.255.255[External]
green[udn]/webserver[Pod] => 0.0.0.0-255.255.255.255[External]

*** Note: Connections between any peers from separate isolated networks are denied by default and therefore not listed in this report.
